force-app/main/default/objects/Produto_do_Fluxo_de_Email__c/Produto_do_Fluxo_de_Email__c.object-meta.xml
<CustomObject>
    <label>Produto do Fluxo de Email</label>
    <nameField>
        <label>Nome de Produto do Fluxo de Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos do Fluxo de Email</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>