force-app/main/default/objects/Produto_do_Fluxo_de_Email__c/fields/Fluxo_Email__c.field-meta.xml
<CustomField>
    <fullName>Fluxo_Email__c</fullName>
    <label>Fluxo de Email</label>
    <referenceTo>Fluxo_Email__c</referenceTo>
    <relationshipLabel>Produtos do Fluxo de Email</relationshipLabel>
    <relationshipName>Produtos_do_Fluxo_de_Email</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>