force-app/main/default/objects/Produto_do_Fluxo_de_Email__c/fields/Nome_produto_fluxo__c.field-meta.xml
<CustomField>
    <fullName>Nome_produto_fluxo__c</fullName>
    <displayFormat>PF-{00000000}</displayFormat>
    <label>Nome do produto do fluxo</label>
    <type>AutoNumber</type>
</CustomField>