force-app/main/default/objects/Produto_do_Fluxo_de_Email__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos do Fluxo de Email</relationshipLabel>
    <relationshipName>Produtos_do_Fluxo_de_Email</relationshipName>
    <type>Lookup</type>
</CustomField>